cashino_tools/Win_SDK_Demo_2023_08_14/CSharpDemo/CSharpDemo/PrinterLibs.h

	
	CSNPRINTERLLIBS size_t __stdcall Port_EnumCOM(char *buffer, size_t length);
	CSNPRINTERLLIBS size_t __stdcall  Port_EnumUSB(char *buffer, size_t length);
	CSNPRINTERLLIBS size_t __stdcall  Port_EnumLPT(char *buffer, size_t length);
	CSNPRINTERLLIBS size_t __stdcall  Port_EnumPRN(char *buffer, size_t length);
	CSNPRINTERLLIBS void * __stdcall  Port_OpenCOMIO(const char *name, unsigned int baudrate = 9600, const int flowcontrol = 0, const int parity = 0, const int databis = 8, const int stopbits = 0);
	CSNPRINTERLLIBS void *  __stdcall Port_OpenUSBIO(const char *name);
	CSNPRINTERLLIBS void * __stdcall  Port_OpenLPTIO(const char *name);
	CSNPRINTERLLIBS void * __stdcall  Port_OpenPRNIO(const char *name);
	CSNPRINTERLLIBS void * __stdcall  Port_OpenTCPIO(const char *ip, const unsigned short port);
	CSNPRINTERLLIBS bool __stdcall  Port_SetPort(void *handle);
	CSNPRINTERLLIBS void  __stdcall Port_ClosePort(void *handle);
	CSNPRINTERLLIBS bool  __stdcall Pos_Reset();
	CSNPRINTERLLIBS bool  __stdcall Pos_SelfTest();
	CSNPRINTERLLIBS bool  __stdcall Pos_FeedLine();
	CSNPRINTERLLIBS bool  __stdcall Pos_FeedHot(int n);
	CSNPRINTERLLIBS bool  __stdcall Pos_Feed_N_Line(int n);
	CSNPRINTERLLIBS bool  __stdcall Pos_FeedNextLable();
	CSNPRINTERLLIBS bool __stdcall  Pos_BlackMark();
	CSNPRINTERLLIBS bool __stdcall  Pos_Align(int value);
	CSNPRINTERLLIBS bool  __stdcall Pos_SetLineHeight(int value);
	CSNPRINTERLLIBS bool  __stdcall Pos_Text(const wchar_t *prnText, int nLan, int nOrgx, int nWidthTimes, int nHeightTimes, int FontType, int nFontStyle);
	CSNPRINTERLLIBS bool  __stdcall Pos_Cmd(unsigned char* cmd, int count);
	CSNPRINTERLLIBS bool  __stdcall Pos_Beep(unsigned char nCount, unsigned char nMillis);
	CSNPRINTERLLIBS bool __stdcall  Pos_KiskOutDrawer(int nId, int nHightTime = 20, int nLowTime = 60);
	CSNPRINTERLLIBS bool __stdcall  Pos_FullCutPaper();
	CSNPRINTERLLIBS bool __stdcall  Pos_HalfCutPaper();
	CSNPRINTERLLIBS bool  __stdcall Pos_Barcode(const char * BarcodeData, int nBarcodeType, int nOrgx, int nUnitWidth, int nUnitHeight, int nFontStyle, int FontPosition);
	CSNPRINTERLLIBS bool __stdcall  Pos_Qrcode(const wchar_t *QrcodeData, int nWidth = 2, int nVersion = 0, int nErrlevenl = 4);
	CSNPRINTERLLIBS bool __stdcall  Pos_EscQrcode(const wchar_t *QrcodeData, int nWidth = 4, int nErrlevenl = 4);
	CSNPRINTERLLIBS bool __stdcall  Pos_DoubleQrcode(const wchar_t *QrcodeData1,int QR1Position,int QR1Version, int QR1Ecc, const wchar_t *QrcodeData2, int QR2Position, int QR2Version, int QR2Ecc, int ModuleSize);
	CSNPRINTERLLIBS bool __stdcall  Pos_ImagePrint(const wchar_t *FileName, int nWidth = 384, int nBinaryAlgorithm = 0);
	CSNPRINTERLLIBS bool __stdcall  Pos_PrintNVLogo(unsigned short nLogo, unsigned short nWidth = 0);
	CSNPRINTERLLIBS int __stdcall  Pos_QueryPrinterErr(unsigned long nTimeout = 3000);
	CSNPRINTERLLIBS bool __stdcall  Pos_QueryStstus(char *rBuffer, int type, unsigned long nTimeout);
	CSNPRINTERLLIBS bool __stdcall  Pos_SetPrinterBaudrate(int nBaudrate);
	CSNPRINTERLLIBS bool __stdcall  Pos_SetPrinterBasic(int nFontStyle, int nDensity, int nLine, int nBeep, int nCut);
	CSNPRINTERLLIBS bool  __stdcall Page_SelectPageMode();
	CSNPRINTERLLIBS bool __stdcall  Page_PrintPage();
	CSNPRINTERLLIBS bool __stdcall  Page_ExitPageMode();
	CSNPRINTERLLIBS bool __stdcall  Page_SetVerticalAbsolutePrintPosition(unsigned short nPosition);
	CSNPRINTERLLIBS bool __stdcall  Page_SetHorizontalAbsolutePrintPosition(unsigned short nPosition);
	CSNPRINTERLLIBS bool __stdcall  Page_SetVerticalRelativePrintPosition(unsigned short nPosition);
	CSNPRINTERLLIBS bool __stdcall  Page_SetHorizontalRelativePrintPosition(unsigned short nPosition);
	CSNPRINTERLLIBS bool __stdcall  Page_SetPageModeDrawDirection(unsigned short nPosition);
	CSNPRINTERLLIBS bool __stdcall  Page_SetPageArea(unsigned short x, unsigned short y, unsigned short w, unsigned short h);
	CSNPRINTERLLIBS bool __stdcall  Page_Text(const wchar_t *prnText, int nLan, int nOrgx, int nWidthTimes, int nHeightTimes, int FontType, int nFontStyle);
	CSNPRINTERLLIBS bool __stdcall  Page_Barcode(const char * BarcodeData, int nBarcodeType, int nOrgx, int nUnitWidth, int nUnitHeight, int nFontStyle, int FontPosition);
	CSNPRINTERLLIBS bool __stdcall  Page_Qrcode(const wchar_t *QrcodeData, int nWidth = 4, int nErrlevenl = 4);
	CSNPRINTERLLIBS bool __stdcall  Page_ImagePrint(const wchar_t *FileName, int nWidth = 384, int nBinaryAlgorithm = 0);
	CSNPRINTERLLIBS bool __stdcall  Pos_DownLoadNVLogo(const wchar_t *FileName, int nBinaryAlgorithm = 0);
	CSNPRINTERLLIBS bool __stdcall  Pos_PrintNVLogoByNumber(int nNumber,int mMode);